--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+            </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -32,7 +32,7 @@
                                 <h1>
                                     Boolean
                                 </h1>
-                                <button class="ms_btn btn btn-primary h-25">Piano blaze</button>
+                                <button class="ms_btn btn btn-primary">Piano blaze</button>
                             </div>
                             <div class="hd_li_box">
                                 <ul class="d-flex py-1">
@@ -50,12 +50,12 @@
                             <p>125</p>
                         </div>
                     </div>
-                    <section class="prossime-classi ">
+                    <section class="prossime-classi">
                         <div class="col-12 ">
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th>
+                                        <th class="fs-5">
                                             Prossime classi
                                         </th>
                                     </tr>
@@ -73,14 +73,111 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th scope="classe">
+                                        <th class="classe" scope="classe">
                                             Classe 75
                                         </th>
                                         <td>
                                             <button class="btn btn-success ">Done</button>
                                         </td>
                                         <td class="fs-5">
-                                            <i class="fa-regular fa-square-pen"></i>
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 75
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-success ">Done</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 76
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-success ">Done</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 77
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-warning text-white">process</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 78
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-success ">Done</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 79
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-danger ">Failed</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 80
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-success ">Done</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 81
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-danger ">Failed</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th class="classe" scope="classe">
+                                            Classe 82
+                                        </th>
+                                        <td>
+                                            <button class="btn btn-success ">Done</button>
+                                        </td>
+                                        <td class="fs-5">
+                                            <i class="fa-thin fa-solid fa-square-pen"></i>
+                                            <i class="fa-solid fa-trash"></i>
                                         </td>
                                     </tr>
                                 </tbody>
