added a p-0 to the section prossime classi, added a media querie for the aside from md size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <p>125</p>
                         </div>
                     </div>
-                    <section class="prossime-classi">
+                    <section class="prossime-classi p-0">
                         <div class="col-12 ">
                             <table class="table">
                                 <thead>
