--- a/index.html
+++ b/index.html
@@ -184,6 +184,53 @@
                             </table>
                         </div>
                     </section>
+                    <section class="faq">
+                        <div class="faq col-12 border">
+                            <h1>Faq</h1>
+                            <div class="accordion" id="accordion1">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Come aggiungere un nuovo studente?
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion1">
+                                    <div class="accordion-body">
+                                    Come aggiungere un nuovo studente.
+                                    </div>
+                                </div>
+                                </div>
+                        </div>
+                        <div class="accordion" id="accordion2">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Come posso accedere alle informazioni del mio account?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion2">
+                                <div class="accordion-body">
+                                    Come posso accedere alle informazioni del mio account.
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="accordion" id="accordion3">
+                            <div class="accordion-item ">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Posso usare questa dashboard da mobile?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion3">
+                                <div class="accordion-body">
+                                    Posso usare questa dashboard da mobile.
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
