Added section todo with a list group items and checkbox from bootstrap forms

--- a/index.html
+++ b/index.html
@@ -231,6 +231,25 @@
                         </div>
                         </div>
                     </section>
+                    <section class="todo">
+                        <div class="todo col-12">
+                            <div class="list-group">
+                                <h1>Todo</h1>
+                                <label class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="">
+                                    Kickoff nuove classi
+                                </label>
+                                <label class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="">
+                                    Lezione su Bootstrap 5 in classe #75
+                                </label>
+                                <label class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="">
+                                    Controllare username github studenti
+                                </label>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
