Added list utenti attivi with relative gutters for all boxes of the page

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </div>
                     </section>
                     <section class="faq">
-                        <div class="faq col-12 border">
+                        <div class="faq col-12 border py-5">
                             <h1>Faq</h1>
                             <div class="accordion" id="accordion1">
                                 <div class="accordion-item">
@@ -232,7 +232,7 @@
                         </div>
                     </section>
                     <section class="todo">
-                        <div class="todo col-12">
+                        <div class="todo col-12 py-5">
                             <div class="list-group">
                                 <h1>Todo</h1>
                                 <label class="list-group-item">
@@ -248,6 +248,20 @@
                                     Controllare username github studenti
                                 </label>
                             </div>
+                        </div>
+                    </section>
+                    <section class="ultimi-arrivi">
+                        
+                        <div class="ultimi-arrivi col-12 py-5">
+                            <img class="w-100" src="../img/stats.jpeg" alt="stats">
+                            <h1 class="text-capitalize">utenti attivi</h1>
+                            <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                            <ul class="list-group">
+                                <li class="list-group-item border-0"> Gennaio: 1200</li>
+                                <li class="list-group-item"> Febbraio: 800</li>
+                                <li class="list-group-item"> Marzo: 1500</li>
+                                <li class="list-group-item"> <a href="index.html">Visualizza report approfondito</a></li>
+                            </ul>
                         </div>
                     </section>
                 </div>
