commit added icons to the aside

--- a/index.html
+++ b/index.html
@@ -29,22 +29,26 @@
         <aside class="d-flex">
             <div class="list-aside d-flex flex-column justify-content-between">
                 <ul class=" list-group">
-                    <li>
+                    <li class="d-flex p-2 align-self-center">
+                        <span><i class="fa-solid fa-house fs-3 me-2"></i></span>
                         <p>
                             Home
                         </p>
                     </li>
-                    <li>
+                    <li class="d-flex p-2 align-self-center">
+                        <span><i class="fa-solid fa-chart-simple fs-3 me-2"></i></span>
                         <p>
                             Stats
                         </p>
                     </li>
-                    <li>
+                    <li class="d-flex p-2 align-self-center">
+                        <span><i class="fa-solid fa-signal fs-3 me-2"></i></span>
                         <p>Signals</p>
                     </li>
                 </ul>
                 <ul class="list-group">
-                    <li>
+                    <li class="d-flex p-2 align-self-center">
+                        <span><i class="fa-solid fa-gear fs-3 me-2"></i></span>
                         <p>Admin</p>
                     </li>
                 </ul>
