--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <div class="ms_container">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 bln bg-primary text-white">
-                        <div class="bln_box col-12 col-md-4 w-100">
+                    <div class="col-12 bln bg-primary text-white w-100">
+                        <div class="bln_box col-12 col-md-4">
                             <h4 class="text-capitalize">
                                 nuovo studente <span><i class="fa-solid fa-square-plus"></i></span>
                             </h4>
                         </div>
-                        <div class="bln_box d-flex  col-12 col-md-4 w-100">
+                        <div class="bln_box d-flex  col-12 col-md-4">
                             <div class="bln-box">
                                 <h1>
                                     Boolean
@@ -81,7 +81,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="bln_box fs-5 col-12 col-md-4 w-100">
+                        <div class="bln_box fs-5 col-12 col-md-4">
                             <p>Studenti online negli ultimi 30 minuti</p>
                             <p>125</p>
                         </div>
