sistemata colonna da 12 che contiene le altre

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="ms_container">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 bln bg-primary text-white w-100">
+                    <div class="bln bg-primary text-white w-100">
                         <div class="bln_box col-12 col-md-4">
                             <h4 class="text-capitalize">
                                 nuovo studente <span><i class="fa-solid fa-square-plus"></i></span>
