added flex , with direction and warp at the primary bln box, added an order-md for the nuovo studente box

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="ms_container">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="bln bg-primary text-white w-100">
-                        <div class="bln_box col-12 col-md-4">
+                    <div class="bln bg-primary text-white flex-row d-flex w-100 flex-wrap">
+                        <div class="bln_box col-12 col-md-4 order-md-2">
                             <h4 class="text-capitalize">
                                 nuovo studente <span><i class="fa-solid fa-square-plus"></i></span>
                             </h4>
